--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 
                 <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Carticica1.png" alt="Mărțișor cărticică" class="w-full h-52 object-cover">
+                        <img src="Imagini/Carticica1.jpg" alt="Mărțișor cărticică" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">15 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">File de Poveste</h4>
@@ -125,7 +125,7 @@
                 </div>
 
             <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Fluture1.png" alt="Mărțișor fluture" class="w-full h-52 object-cover">
+                        <img src="Imagini/Fluture1.jpg" alt="Mărțișor fluture" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">15 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Aripi de Lumină</h4>
@@ -139,7 +139,7 @@
                 </div>
 
             <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Plic1.png" alt="Mărțișor plic" class="w-full h-52 object-cover">
+                        <img src="Imagini/Plic1.jpg" alt="Mărțișor plic" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">10 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Poștașul primăverii</h4>
@@ -153,7 +153,7 @@
                 </div>
             <div class="scroll-reveal"> 
                 <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Cosar.png" alt="Cutie personalizată" class="w-full h-52 object-cover">
+                        <img src="Imagini/Cosar.jpg" alt="Cutie personalizată" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">10 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Vestitorul Norocului</h4>
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Traditional1.png" alt="Mărțișor potcoavă" class="w-full h-52 object-cover">
+                        <img src="Imagini/Traditional1.jpg" alt="Mărțișor potcoavă" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">10 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Dor de Tradiție</h4>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Potcoava1.png" alt="Mărțișor potcoavă" class="w-full h-52 object-cover">
+                        <img src="Imagini/Potcoava1.jpg" alt="Mărțișor potcoavă" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">5 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Talismanul Casei</h4>
@@ -193,7 +193,7 @@
                 </div>
 
             <div class="scroll-reveal"> <div class="product-card relative bg-white rounded-xl sm:rounded-2xl shadow-lg overflow-hidden border border-rose-50 flex flex-col h-full">
-                        <img src="Imagini/Buburuza1.png" alt="Mărțișor trifoi" class="w-full h-52 object-cover">
+                        <img src="Imagini/Buburuza1.jpg" alt="Mărțișor trifoi" class="w-full h-52 object-cover">
                         <span class="absolute top-2 right-2 bg-white/90 backdrop-blur px-2 py-1 rounded-lg text-xs font-bold text-rose-600 shadow-sm">5 RON</span>
                         <div class="p-6 flex flex-col flex-grow">
                             <h4 class="font-bold text-xl mb-2 text-slate-800">Trifoiul Speranței</h4>
