--- a/Trifoi.html
+++ b/Trifoi.html
@@ -76,7 +76,7 @@
             <div class="lg:col-span-7 space-y-6">
                 <div class="rounded-2xl shadow-xl bg-white p-2 border border-orange-50 cursor-zoom-in" onclick="deschideLightbox()">
                     <div class="overflow-hidden rounded-xl h-[400px] lg:h-[550px] flex items-center justify-center bg-gray-100 relative group">
-                        <img id="mainImage" src="Imagini/Buburuza1.png" alt="Imagine Principală Mărțișor Trifoi" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                        <img id="mainImage" src="Imagini/Buburuza1.jpg" alt="Imagine Principală Mărțișor Trifoi" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
                         <div class="absolute bottom-4 right-4 bg-black/50 text-white px-3 py-1 rounded-full text-xs backdrop-blur-sm">
                             🔍 Click pentru detalii
                         </div>
@@ -84,8 +84,8 @@
                 </div>
                 
                 <div class="grid grid-cols-3 gap-4 px-2">
-                    <img src="Imagini/Buburuza1.png" onclick="schimbaImaginea(this, 0)" class="gallery-thumb active-thumb h-24 w-full object-cover rounded-lg shadow-sm cursor-pointer transition-all border-2 border-transparent hover:border-rose-300">
-                    <img src="Imagini/Buburuza2.png" onclick="schimbaImaginea(this, 1)" class="gallery-thumb h-24 w-full object-cover rounded-lg shadow-sm cursor-pointer transition-all border-2 border-transparent hover:border-rose-300">
+                    <img src="Imagini/Buburuza1.jpg" onclick="schimbaImaginea(this, 0)" class="gallery-thumb active-thumb h-24 w-full object-cover rounded-lg shadow-sm cursor-pointer transition-all border-2 border-transparent hover:border-rose-300">
+                    <img src="Imagini/Buburuza2.jpg" onclick="schimbaImaginea(this, 1)" class="gallery-thumb h-24 w-full object-cover rounded-lg shadow-sm cursor-pointer transition-all border-2 border-transparent hover:border-rose-300">
                     <img src="Imagini/Buburuza3.jpg" onclick="schimbaImaginea(this, 2)" class="gallery-thumb h-24 w-full object-cover rounded-lg shadow-sm cursor-pointer transition-all border-2 border-transparent hover:border-rose-300">
 
                 </div>
@@ -202,7 +202,7 @@
 
 <script>
     // 1. Lista de imagini
-    const imagini = ["Imagini/Buburuza1.png", "Imagini/Buburuza2.png", "Imagini/Buburuza3.jpg"];
+    const imagini = ["Imagini/Buburuza1.jpg", "Imagini/Buburuza2.jpg", "Imagini/Buburuza3.jpg"];
     let indexCurent = 0;
 
     // Sincronizare: Schimbă imaginea și în pagină, nu doar în modal
